Mon Sep 26 17:39:27 2011  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, lib/Makefile.am, lib/communtative_algebra/Makefile.am,
	  lib/commutative_algebra/macaulay.gel, src/funclib.c:
	  Add MacaulayRep, MacaulayLowerOperator, and MacaulayBound
	  functions and a Commutative Algebra section

	* src/geniustests.txt: Add tests of the above

Fri Jul 29 09:06:50 2011  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.14

Fri Jul 29 09:03:53 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/funclib.c, src/dict.c, src/calc.c,
	  src/inter.c: Apply modified patch from Vincent Untz to fix
	  compilation warnings

	* */Makefile.am: use WARN_CFLAGS

	* src/ve-miscui.c, src/ve-misc.h, src/matrixw.[ch], src/graphing.c,
	  src/gnome-genius.c, src/genius-readline-helper.c, src/funclib.c:
	  Fix warnings and fix a crasher bug in the process

Thu Jul 28 12:44:05 2011  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.13

	* po/POTFILES.in: forgotten file

Mon Jul 25 10:38:56 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/Makefile.am: add $(INTLLIBS) to LDADDs.  Thanks to Daniel Macks

Thu Jul 14 23:52:58 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/geniustests.txt: some more tests

Thu Jul 14 23:49:51 2011  Jiri (George) Lebl <jirka@5z.com>

	* lib/*/*.gel, src/funclib.c: Implement IntegerQuotient internally
	  for speed and use it instead of floor(a/b)

	* help/C/genius.xml: fix docbook abstract thingie.

	* src/geniustests.txt: some more tests

Thu Jul 14 17:26:00 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: minor optimizations

Thu Jul 14 16:34:40 2011  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/misc.gel: Optimize SortVector (use quicksort
	  for longer vectors)

Tue Jul 12 23:16:59 2011  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/structs.h, src/parse.y, src/lexer.l, src/calc.c,
	  src/matrixw.[ch]: add increment and swapwith operators which
	  are quicker ways to do these common operations.  swapwith does