@@ -280,6 +280,14 @@ is called inside a block that was evaluated using modular arithmetic (using <lit
          </listitem>
         </varlistentry>
 
+        <varlistentry id="gel-function-CurrentTime">
+         <term>CurrentTime</term>
+         <listitem>
+          <synopsis>CurrentTime</synopsis>
+          <para>Returns the current UNIX time with microsecond precision as a floating point number.  That is, returns the number of seconds since January 1st 1970.</para>
+         </listitem>
+        </varlistentry>
+
         <varlistentry id="gel-function-display">
          <term>display</term>
          <listitem>
