@@ -2,6 +2,7 @@ Changes to 1.0.15
 
 * New functions MacaulayRep, MacaulayLowerOperator, MacaulayBound
 * FIXME: TEST AND DOCUMENT the above
+* New functions CurrentTime (DOCUMENTED)
 
 Changes to 1.0.14
 
