@@ -1,3 +1,8 @@
+Mon Nov 07 00:28:58 2011  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c, help/C/gel-function-list.xml:  Add CurrentTime
+	  to return the current UNIX time 
+
 Mon Sep 26 17:39:27 2011  Jiri (George) Lebl <jirka@5z.com>
 
 	* configure.in, lib/Makefile.am, lib/communtative_algebra/Makefile.am,
